// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInputWithBadges renders badges with custom BadgeAppearance 1`] = `
.emotion-0 {
  display: block;
  padding-top: 0;
  margin-top: 0;
  margin-bottom: 4px;
  font-weight: 500;
}

.emotion-1 {
  height: auto;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
  border: 1px solid;
  border-radius: 4px;
  color: inherit;
  height: 36px;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  height: auto;
  min-height: 36px;
  padding-bottom: 4px;
  padding-top: 4px;
  background-color: var(--themeBgPrimary, #FFFFFF);
  border-color: var(--themeBorder, #DADDE2);
}

.emotion-1>div {
  width: auto;
}

.emotion-1::-webkit-input-placeholder {
  color: var(--themeTextColorPrimary, #1B2029);
  opacity: 0.4;
}

.emotion-1::-moz-placeholder {
  color: var(--themeTextColorPrimary, #1B2029);
  opacity: 0.4;
}

.emotion-1:-ms-input-placeholder {
  color: var(--themeTextColorPrimary, #1B2029);
  opacity: 0.4;
}

.emotion-1::placeholder {
  color: var(--themeTextColorPrimary, #1B2029);
  opacity: 0.4;
}

.emotion-1 input {
  font-size: inherit;
  color: inherit;
}

.emotion-1 input::-webkit-input-placeholder {
  color: var(--themeTextColorPrimary, #1B2029);
  opacity: 0.4;
}

.emotion-1 input::-moz-placeholder {
  color: var(--themeTextColorPrimary, #1B2029);
  opacity: 0.4;
}

.emotion-1 input:-ms-input-placeholder {
  color: var(--themeTextColorPrimary, #1B2029);
  opacity: 0.4;
}

.emotion-1 input::placeholder {
  color: var(--themeTextColorPrimary, #1B2029);
  opacity: 0.4;
}

.emotion-1:focus {
  background-color: rgba(125,88,255,0.05);
  border-color: var(--themeBrandPrimary, #7D58FF);
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding-bottom: 4px;
  padding-top: 4px;
  padding-right: 8px;
}

.emotion-2,
.emotion-2 * {
  max-width: 100%;
}

.emotion-3 {
  background-color: #7D58FF;
  border-color: #7D58FF;
  color: #FFFFFF;
  box-sizing: border-box;
  border-width: 1px;
  border-style: solid;
  padding: 0 8px 0;
  font-size: 80%;
  line-height: 20px;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-rendering: optimizeLegibility;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: auto;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
  -webkit-column-gap: 4px;
  column-gap: 4px;
  row-gap: 0;
}

.emotion-4>div {
  width: auto;
}

@supports not (column-gap: 1px) {
  .emotion-4>*:not(:last-child) {
    padding-right: 4px;
  }
}

@supports not (row-gap: 1px) {
  .emotion-4>*:not(:last-child) {
    padding-bottom: 0;
  }
}

.emotion-5 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
}

.emotion-6 {
  overflow: hidden;
  overflow: -moz-hidden-unscrollable;
  text-overflow: ellipsis;
  white-space: nowrap;
  white-space: nowrap;
}

.emotion-7 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
}

.emotion-8 {
  cursor: pointer;
}

.emotion-9 {
  vertical-align: middle;
  fill: currentColor;
}

.emotion-9 use {
  pointer-events: none;
}

.emotion-26 {
  background: none;
  border: 0;
  box-shadow: none;
  padding: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 50px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding-bottom: 4px;
  padding-top: 4px;
  padding-right: 8px;
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
}

.emotion-26:focus {
  outline: 0;
}

.emotion-26,
.emotion-26 * {
  max-width: 100%;
}

<TextInputWithBadges
  addBadgeOnBlur={true}
  appearance="standard"
  badges={
    [
      {
        "label": "Badge one",
        "value": "badge-one",
      },
      {
        "label": "Badge two",
        "value": "badge-two",
      },
      {
        "label": "Badge three",
        "value": "badge-three",
      },
    ]
  }
  id="appearance"
  inputLabel="Appearance"
  showInputLabel={true}
  type="text"
>
  <div
    data-cy="textInput textInput.standard"
  >
    <label
      className="emotion-0"
      data-cy="textInput-label"
      hidden={false}
      htmlFor="appearance"
    >
      Appearance
    </label>
    <Memo(FormFieldWrapper)
      id="appearance"
    >
      <div
        className="emotion-1"
      >
        <span
          className="emotion-2"
          key="badge-one-badgeWrapper"
        >
          <Memo(Badge)
            appearance="primary"
          >
            <span
              className="emotion-3"
              data-cy="badge"
            >
              <Flex
                align="center"
                gutterSize="xxs"
              >
                <div
                  className="emotion-4"
                  data-cy="flex"
                >
                  <FlexItem>
                    <div
                      className="emotion-5"
                      data-cy="flexItem"
                    >
                      <div
                        className="emotion-6"
                      >
                        Badge one
                      </div>
                    </div>
                  </FlexItem>
                  <FlexItem
                    flex="shrink"
                  >
                    <div
                      className="emotion-7"
                      data-cy="flexItem"
                    >
                      <Memo(Clickable)
                        action={[Function]}
                      >
                        <span
                          className="emotion-8"
                          onClick={[Function]}
                          onKeyPress={[Function]}
                          role="button"
                          tabIndex={-1}
                        >
                          <Icon
                            shape="system-close"
                            size="xxs"
                          >
                            <svg
                              aria-label="system-close icon"
                              className="emotion-9"
                              data-cy="icon"
                              height={12}
                              preserveAspectRatio="xMinYMin meet"
                              role="img"
                              viewBox="0 0 12 12"
                              width={12}
                            >
                              <use
                                xlinkHref="#system-close"
                              />
                            </svg>
                          </Icon>
                        </span>
                      </Memo(Clickable)>
                    </div>
                  </FlexItem>
                </div>
              </Flex>
            </span>
          </Memo(Badge)>
        </span>
        <span
          className="emotion-2"
          key="badge-two-badgeWrapper"
        >
          <Memo(Badge)
            appearance="primary"
          >
            <span
              className="emotion-3"
              data-cy="badge"
            >
              <Flex
                align="center"
                gutterSize="xxs"
              >
                <div
                  className="emotion-4"
                  data-cy="flex"
                >
                  <FlexItem>
                    <div
                      className="emotion-5"
                      data-cy="flexItem"
                    >
                      <div
                        className="emotion-6"
                      >
                        Badge two
                      </div>
                    </div>
                  </FlexItem>
                  <FlexItem
                    flex="shrink"
                  >
                    <div
                      className="emotion-7"
                      data-cy="flexItem"
                    >
                      <Memo(Clickable)
                        action={[Function]}
                      >
                        <span
                          className="emotion-8"
                          onClick={[Function]}
                          onKeyPress={[Function]}
                          role="button"
                          tabIndex={-1}
                        >
                          <Icon
                            shape="system-close"
                            size="xxs"
                          >
                            <svg
                              aria-label="system-close icon"
                              className="emotion-9"
                              data-cy="icon"
                              height={12}
                              preserveAspectRatio="xMinYMin meet"
                              role="img"
                              viewBox="0 0 12 12"
                              width={12}
                            >
                              <use
                                xlinkHref="#system-close"
                              />
                            </svg>
                          </Icon>
                        </span>
                      </Memo(Clickable)>
                    </div>
                  </FlexItem>
                </div>
              </Flex>
            </span>
          </Memo(Badge)>
        </span>
        <span
          className="emotion-2"
          key="badge-three-badgeWrapper"
        >
          <Memo(Badge)
            appearance="primary"
          >
            <span
              className="emotion-3"
              data-cy="badge"
            >
              <Flex
                align="center"
                gutterSize="xxs"
              >
                <div
                  className="emotion-4"
                  data-cy="flex"
                >
                  <FlexItem>
                    <div
                      className="emotion-5"
                      data-cy="flexItem"
                    >
                      <div
                        className="emotion-6"
                      >
                        Badge three
                      </div>
                    </div>
                  </FlexItem>
                  <FlexItem
                    flex="shrink"
                  >
                    <div
                      className="emotion-7"
                      data-cy="flexItem"
                    >
                      <Memo(Clickable)
                        action={[Function]}
                      >
                        <span
                          className="emotion-8"
                          onClick={[Function]}
                          onKeyPress={[Function]}
                          role="button"
                          tabIndex={-1}
                        >
                          <Icon
                            shape="system-close"
                            size="xxs"
                          >
                            <svg
                              aria-label="system-close icon"
                              className="emotion-9"
                              data-cy="icon"
                              height={12}
                              preserveAspectRatio="xMinYMin meet"
                              role="img"
                              viewBox="0 0 12 12"
                              width={12}
                            >
                              <use
                                xlinkHref="#system-close"
                              />
                            </svg>
                          </Icon>
                        </span>
                      </Memo(Clickable)>
                    </div>
                  </FlexItem>
                </div>
              </Flex>
            </span>
          </Memo(Badge)>
        </span>
        <input
          aria-describedby=""
          aria-invalid={false}
          className="emotion-26"
          data-cy="textInput-input"
          id="appearance"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          type="text"
        />
      </div>
    </Memo(FormFieldWrapper)>
  </div>
</TextInputWithBadges>
`;

exports[`TextInputWithBadges renders empty 1`] = `
.emotion-0 {
  display: block;
  padding-top: 0;
  margin-top: 0;
  margin-bottom: 4px;
  font-weight: 500;
}

.emotion-1 {
  height: auto;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
  border: 1px solid;
  border-radius: 4px;
  color: inherit;
  height: 36px;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  height: auto;
  min-height: 36px;
  padding-bottom: 4px;
  padding-top: 4px;
  background-color: var(--themeBgPrimary, #FFFFFF);
  border-color: var(--themeBorder, #DADDE2);
}

.emotion-1>div {
  width: auto;
}

.emotion-1::-webkit-input-placeholder {
  color: var(--themeTextColorPrimary, #1B2029);
  opacity: 0.4;
}

.emotion-1::-moz-placeholder {
  color: var(--themeTextColorPrimary, #1B2029);
  opacity: 0.4;
}

.emotion-1:-ms-input-placeholder {
  color: var(--themeTextColorPrimary, #1B2029);
  opacity: 0.4;
}

.emotion-1::placeholder {
  color: var(--themeTextColorPrimary, #1B2029);
  opacity: 0.4;
}

.emotion-1 input {
  font-size: inherit;
  color: inherit;
}

.emotion-1 input::-webkit-input-placeholder {
  color: var(--themeTextColorPrimary, #1B2029);
  opacity: 0.4;
}

.emotion-1 input::-moz-placeholder {
  color: var(--themeTextColorPrimary, #1B2029);
  opacity: 0.4;
}

.emotion-1 input:-ms-input-placeholder {
  color: var(--themeTextColorPrimary, #1B2029);
  opacity: 0.4;
}

.emotion-1 input::placeholder {
  color: var(--themeTextColorPrimary, #1B2029);
  opacity: 0.4;
}

.emotion-1:focus {
  background-color: rgba(125,88,255,0.05);
  border-color: var(--themeBrandPrimary, #7D58FF);
}

.emotion-2 {
  background: none;
  border: 0;
  box-shadow: none;
  padding: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 50px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding-bottom: 4px;
  padding-top: 4px;
  padding-right: 8px;
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
}

.emotion-2:focus {
  outline: 0;
}

.emotion-2,
.emotion-2 * {
  max-width: 100%;
}

<TextInputWithBadges
  addBadgeOnBlur={true}
  appearance="standard"
  id="empty"
  inputLabel="empty"
  showInputLabel={true}
  type="text"
>
  <div
    data-cy="textInput textInput.standard"
  >
    <label
      className="emotion-0"
      data-cy="textInput-label"
      hidden={false}
      htmlFor="empty"
    >
      empty
    </label>
    <Memo(FormFieldWrapper)
      id="empty"
    >
      <div
        className="emotion-1"
      >
        <input
          aria-describedby=""
          aria-invalid={false}
          className="emotion-2"
          data-cy="textInput-input"
          id="empty"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          type="text"
        />
      </div>
    </Memo(FormFieldWrapper)>
  </div>
</TextInputWithBadges>
`;

exports[`TextInputWithBadges renders with badges 1`] = `
.emotion-0 {
  display: block;
  padding-top: 0;
  margin-top: 0;
  margin-bottom: 4px;
  font-weight: 500;
}

.emotion-1 {
  height: auto;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
  border: 1px solid;
  border-radius: 4px;
  color: inherit;
  height: 36px;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  height: auto;
  min-height: 36px;
  padding-bottom: 4px;
  padding-top: 4px;
  background-color: var(--themeBgPrimary, #FFFFFF);
  border-color: var(--themeBorder, #DADDE2);
}

.emotion-1>div {
  width: auto;
}

.emotion-1::-webkit-input-placeholder {
  color: var(--themeTextColorPrimary, #1B2029);
  opacity: 0.4;
}

.emotion-1::-moz-placeholder {
  color: var(--themeTextColorPrimary, #1B2029);
  opacity: 0.4;
}

.emotion-1:-ms-input-placeholder {
  color: var(--themeTextColorPrimary, #1B2029);
  opacity: 0.4;
}

.emotion-1::placeholder {
  color: var(--themeTextColorPrimary, #1B2029);
  opacity: 0.4;
}

.emotion-1 input {
  font-size: inherit;
  color: inherit;
}

.emotion-1 input::-webkit-input-placeholder {
  color: var(--themeTextColorPrimary, #1B2029);
  opacity: 0.4;
}

.emotion-1 input::-moz-placeholder {
  color: var(--themeTextColorPrimary, #1B2029);
  opacity: 0.4;
}

.emotion-1 input:-ms-input-placeholder {
  color: var(--themeTextColorPrimary, #1B2029);
  opacity: 0.4;
}

.emotion-1 input::placeholder {
  color: var(--themeTextColorPrimary, #1B2029);
  opacity: 0.4;
}

.emotion-1:focus {
  background-color: rgba(125,88,255,0.05);
  border-color: var(--themeBrandPrimary, #7D58FF);
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding-bottom: 4px;
  padding-top: 4px;
  padding-right: 8px;
}

.emotion-2,
.emotion-2 * {
  max-width: 100%;
}

.emotion-3 {
  background-color: #7D58FF;
  border-color: #7D58FF;
  color: #FFFFFF;
  box-sizing: border-box;
  border-width: 1px;
  border-style: solid;
  padding: 0 8px 0;
  font-size: 80%;
  line-height: 20px;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-rendering: optimizeLegibility;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: auto;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
  -webkit-column-gap: 4px;
  column-gap: 4px;
  row-gap: 0;
}

.emotion-4>div {
  width: auto;
}

@supports not (column-gap: 1px) {
  .emotion-4>*:not(:last-child) {
    padding-right: 4px;
  }
}

@supports not (row-gap: 1px) {
  .emotion-4>*:not(:last-child) {
    padding-bottom: 0;
  }
}

.emotion-5 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
}

.emotion-6 {
  overflow: hidden;
  overflow: -moz-hidden-unscrollable;
  text-overflow: ellipsis;
  white-space: nowrap;
  white-space: nowrap;
}

.emotion-7 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
}

.emotion-8 {
  cursor: pointer;
}

.emotion-9 {
  vertical-align: middle;
  fill: currentColor;
}

.emotion-9 use {
  pointer-events: none;
}

.emotion-26 {
  background: none;
  border: 0;
  box-shadow: none;
  padding: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 50px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding-bottom: 4px;
  padding-top: 4px;
  padding-right: 8px;
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
}

.emotion-26:focus {
  outline: 0;
}

.emotion-26,
.emotion-26 * {
  max-width: 100%;
}

<TextInputWithBadges
  addBadgeOnBlur={true}
  appearance="standard"
  badges={
    [
      {
        "label": "Badge one",
        "value": "badge-one",
      },
      {
        "label": "Badge two",
        "value": "badge-two",
      },
      {
        "label": "Badge three",
        "value": "badge-three",
      },
    ]
  }
  id="withBadges"
  inputLabel="With badges"
  showInputLabel={true}
  type="text"
>
  <div
    data-cy="textInput textInput.standard"
  >
    <label
      className="emotion-0"
      data-cy="textInput-label"
      hidden={false}
      htmlFor="withBadges"
    >
      With badges
    </label>
    <Memo(FormFieldWrapper)
      id="withBadges"
    >
      <div
        className="emotion-1"
      >
        <span
          className="emotion-2"
          key="badge-one-badgeWrapper"
        >
          <Memo(Badge)
            appearance="primary"
          >
            <span
              className="emotion-3"
              data-cy="badge"
            >
              <Flex
                align="center"
                gutterSize="xxs"
              >
                <div
                  className="emotion-4"
                  data-cy="flex"
                >
                  <FlexItem>
                    <div
                      className="emotion-5"
                      data-cy="flexItem"
                    >
                      <div
                        className="emotion-6"
                      >
                        Badge one
                      </div>
                    </div>
                  </FlexItem>
                  <FlexItem
                    flex="shrink"
                  >
                    <div
                      className="emotion-7"
                      data-cy="flexItem"
                    >
                      <Memo(Clickable)
                        action={[Function]}
                      >
                        <span
                          className="emotion-8"
                          onClick={[Function]}
                          onKeyPress={[Function]}
                          role="button"
                          tabIndex={-1}
                        >
                          <Icon
                            shape="system-close"
                            size="xxs"
                          >
                            <svg
                              aria-label="system-close icon"
                              className="emotion-9"
                              data-cy="icon"
                              height={12}
                              preserveAspectRatio="xMinYMin meet"
                              role="img"
                              viewBox="0 0 12 12"
                              width={12}
                            >
                              <use
                                xlinkHref="#system-close"
                              />
                            </svg>
                          </Icon>
                        </span>
                      </Memo(Clickable)>
                    </div>
                  </FlexItem>
                </div>
              </Flex>
            </span>
          </Memo(Badge)>
        </span>
        <span
          className="emotion-2"
          key="badge-two-badgeWrapper"
        >
          <Memo(Badge)
            appearance="primary"
          >
            <span
              className="emotion-3"
              data-cy="badge"
            >
              <Flex
                align="center"
                gutterSize="xxs"
              >
                <div
                  className="emotion-4"
                  data-cy="flex"
                >
                  <FlexItem>
                    <div
                      className="emotion-5"
                      data-cy="flexItem"
                    >
                      <div
                        className="emotion-6"
                      >
                        Badge two
                      </div>
                    </div>
                  </FlexItem>
                  <FlexItem
                    flex="shrink"
                  >
                    <div
                      className="emotion-7"
                      data-cy="flexItem"
                    >
                      <Memo(Clickable)
                        action={[Function]}
                      >
                        <span
                          className="emotion-8"
                          onClick={[Function]}
                          onKeyPress={[Function]}
                          role="button"
                          tabIndex={-1}
                        >
                          <Icon
                            shape="system-close"
                            size="xxs"
                          >
                            <svg
                              aria-label="system-close icon"
                              className="emotion-9"
                              data-cy="icon"
                              height={12}
                              preserveAspectRatio="xMinYMin meet"
                              role="img"
                              viewBox="0 0 12 12"
                              width={12}
                            >
                              <use
                                xlinkHref="#system-close"
                              />
                            </svg>
                          </Icon>
                        </span>
                      </Memo(Clickable)>
                    </div>
                  </FlexItem>
                </div>
              </Flex>
            </span>
          </Memo(Badge)>
        </span>
        <span
          className="emotion-2"
          key="badge-three-badgeWrapper"
        >
          <Memo(Badge)
            appearance="primary"
          >
            <span
              className="emotion-3"
              data-cy="badge"
            >
              <Flex
                align="center"
                gutterSize="xxs"
              >
                <div
                  className="emotion-4"
                  data-cy="flex"
                >
                  <FlexItem>
                    <div
                      className="emotion-5"
                      data-cy="flexItem"
                    >
                      <div
                        className="emotion-6"
                      >
                        Badge three
                      </div>
                    </div>
                  </FlexItem>
                  <FlexItem
                    flex="shrink"
                  >
                    <div
                      className="emotion-7"
                      data-cy="flexItem"
                    >
                      <Memo(Clickable)
                        action={[Function]}
                      >
                        <span
                          className="emotion-8"
                          onClick={[Function]}
                          onKeyPress={[Function]}
                          role="button"
                          tabIndex={-1}
                        >
                          <Icon
                            shape="system-close"
                            size="xxs"
                          >
                            <svg
                              aria-label="system-close icon"
                              className="emotion-9"
                              data-cy="icon"
                              height={12}
                              preserveAspectRatio="xMinYMin meet"
                              role="img"
                              viewBox="0 0 12 12"
                              width={12}
                            >
                              <use
                                xlinkHref="#system-close"
                              />
                            </svg>
                          </Icon>
                        </span>
                      </Memo(Clickable)>
                    </div>
                  </FlexItem>
                </div>
              </Flex>
            </span>
          </Memo(Badge)>
        </span>
        <input
          aria-describedby=""
          aria-invalid={false}
          className="emotion-26"
          data-cy="textInput-input"
          id="withBadges"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          type="text"
        />
      </div>
    </Memo(FormFieldWrapper)>
  </div>
</TextInputWithBadges>
`;
